<resources>
    <!-- General -->
    <string name="app_name">Qiyorie</string>
    
    <!-- Login -->
    <string name="login_form_title">Login to your account</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_signin_btn_text">Sign In</string>
    <string name="login_signin_social_title">- Or sign in with -</string>
    <string name="login_signup_title">Don\'t have an account?</string>
    <string name="login_signup_text">Sign Up</string>

    <!-- Profile -->
    <string name="profile_username">John Doe</string>
    <string name="profile_userid">\@johnDoe1213</string>
    <string name="profile_desc">Hello My name is Hello world nice to meet you</string>
    <string name="profile_edit_title">Edit Profile</string>
    <string name="profile_posts_title">Posts</string>
    <string name="profile_posts_total">21</string>
    <string name="profile_followers_title">Followers</string>
    <string name="profile_followers_total">1,201</string>
    <string name="profile_followings_title">Following</string>
    <string name="profile_followings_total">64</string>
    <string name="profile_basicinfo_title">Basic Information</string>
    <string name="profile_tabview_post_title">Posts</string>\
    <string name="profile_tabview_about_title">About</string>


    <!-- Post Drawer -->
    <string name="post_drawer_bookmark">บันทึก</string>
    <string name="post_drawer_qr">คิวอาร์โค้ด</string>
    <string name="post_drawer_share">แชร์</string>
    <string name="post_drawer_fav">เพิ่มในรายการโปรด</string>
    <string name="post_drawer_unfollow">เลิกติดตาม</string>
    <string name="post_drawer_why_you_see_this">ทำไมคุณจึงเห็นโพสต์นี้</string>
    <string name="post_drawer_hide">ซ่อน</string>
    <string name="post_drawer_about_this_user">เกี่ยวกับบัญชีนี้</string>
    <string name="post_drawer_report">รายงาน</string>

    <!-- Edit Profie Image Drawer -->
    <string name="profile_drawer_editprofile_capture">Take a Photo</string>
    <string name="profile_drawer_editprofile_gallery">Choose from Gallery</string>


    <!-- Explore Fragment -->
    <string name="explore_searchbar_hint">Find what you\'re looking for</string>
    <string name="explore_recommend_title">Recommended For You</string>
    <string name="explore_relevant_question">Does this suggestion appeal to you?</string>
    <string name="explore_trending_title">Trending Post</string>
    <string name="explore_nothing_title">Nothing to show here :(</string>

    <!-- Empty Page -->
    <string name="empty_page_title">Nothing to show here :(</string>
</resources>